--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dynamic/dynamicvideos",
+    "name": "dddynamic/dynamicvideos",
     "description": "Dynamic Videos per page configuaration from admin",
     "require": {
       "php": "~5.6.0|7.0.2|~7.0.6",
