--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
       "php": ">=5.3.0"
     },
     "license": "MIT",
+    "minimum-stability": "dev",
     "extra": {
         "map": [
             [
