--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,20 @@
 {
-    "name": "dddynamic/dynamicvideos",
+    "name": "dynamicdd/dynamicvideos",
     "description": "Dynamic Videos per page configuaration from admin",
     "require": {
       "php": ">=5.3.0"
     },
     "license": "MIT",
-    "minimum-stability": "dev",
+    "version": "0.74.0-beta4",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "extra": {
         "map": [
             [
                 "*",
-                "Dynamic/DynamicVideos"
+                "Dynamicdd/DynamicVideos"
             ]
         ]
     }
