--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,29 @@
 {
-    "name": "dynamicdd/dynamicvideos",
+     "name": "dynamicdd/dynamicvideos",
     "description": "Dynamic Videos per page configuaration from admin",
-    "require": {
-      "php": ">=5.3.0"
-    },
-    "license": "MIT",
-    "version": "0.74.0-beta4",
+    "keywords": ["magento", "magento2 extension", "magento 2 extension", "extension", "module", "magento2 module", "magento 2 module"],
+    "type": "magento2-module",
+    "version": "1.4.3",
+    "authors": [
+        {
+            "name": "Dev",
+            "email": "test@test.com"
+        }
+    ],
     "license": [
         "OSL-3.0",
         "AFL-3.0"
     ],
-    "extra": {
-        "map": [
-            [
-                "*",
-                "Dynamicdd/DynamicVideos"
-            ]
-        ]
-    }
+    "require": {
+    },
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "Dynamicdd\\Dynamicvideos\\": ""
+        }
+    },
+    "minimum-stability": "alpha",
+    "prefer-stable": true
 }
